updated build pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,17 +20,10 @@ pool:
 
 steps:
 - task: DotNetCoreCLI@2
-  displayName: dotnet restore
-  inputs:
-    command: restore
-    projects: 'src/**/*.csproj'
-    noCache: true
-
-- task: DotNetCoreCLI@2
   displayName: dotnet build
   inputs:
     projects: 'src/**/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --no-restore'
+    arguments: '--configuration $(buildConfiguration)'
     
 - task: DotNetCoreCLI@2
   displayName: 'dotnet pack'
